# Jobby

./: .env.example  .gitignore  Makefile  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  prompts.py  schemas.py
backend/app/api/: routes.py
backend/app/db/: migrations.py  models.py  session.py
backend/app/services/: gmail.py  llm.py
backend/tests/: test_applications.py  test_gmail.py  test_health.py  test_llm.py
docs/: README.md  architecture.md  backend-api.md  data-model.md  extension.md  frontend.md  local-development.md  roadmap.md
extension/: manifest.json  options.html  options.js  popup.css  popup.html  popup.js
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  types.ts
frontend/app/: globals.css  head.tsx  layout.tsx  page.tsx
frontend/app/applications/[id]/: page.tsx
frontend/app/applications/new/: page.tsx
frontend/components/: AIWorkspace.tsx  ActivityGrid.tsx  ApplicationActions.tsx  ApplicationEditor.tsx  ApplicationFormFields.tsx  ApplicationHeader.tsx  ApplicationTable.tsx  ExtensionCard.tsx  GmailPanel.tsx  HistoryList.tsx  InputForm.tsx  OutputSections.tsx
frontend/components/ui/: Button.tsx  Card.tsx  Field.tsx  StatusBadge.tsx
frontend/lib/: api.ts
frontend/public/: site.webmanifest
infra/: docker-compose.dev.yml  docker-compose.yml
scripts/: dev.sh  smoke_hermes.sh
