[project]
name = "jobby-backend"
version = "0.1.0"
description = "FastAPI backend for Jobby"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
